feat: clarifications
